# humanoid-kick

./: CMakeLists.txt  package.xml  rosinstall  setup.py
launch/: joy_kicker.launch  kick_nodes.launch  kicker.launch
msg/: Path.msg  Times.msg
nodes/: nao_effector  nao_kick
src/nao_kick/: keyframe_executor.py  kick_keyframe.py
srv/: SetEffectorPosition.srv  SetEffectorPositions.srv
