<package>
  <name>nao_kick</name>
  <version>0.0.0</version>

  <description>
    Adds a node for making the nao robot kick.
    Uses position interpolation.
  </description>

  <maintainer email="jondy276@student.liu.se">Jon Dybeck</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>humanoid_nav_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>naoqi_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>humanoid_nav_msgs</run_depend>
  <run_depend>naoqi_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nao_pose</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>

</package>
